tests/snapshots/config_fixtures__unknown_provider.snap
---
source: src/config.rs
assertion_line: 651
expression: err.to_string()
---
TOML parse error at line 7, column 12
  |
7 | provider = "azure"
  |            ^^^^^^^
unknown variant `azure`, expected one of `openai`, `openrouter`, `anthropic`, `minimax`
